simplify tolist for streams i uttak, fjerner redundant static for inner records (#4796)